--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section>
   <div class="row">
    
-   <div class="col-lg-12">
+   <div class="col-lg-6">
    <div  style=" width:423px; margin-top:50px; margin-left:70px;">
    <h2 class="font_2">SURBHI JAIN</h2>
    <b style="width:60px;""><hr></b>
@@ -77,6 +77,59 @@
 
 </div>
 </div>
+<div class="col-lg-6" >
+      <div class="container" style="margin-top: 30px; margin-left: 100px; height:400px; width:350px;">
+         <h2> Sketch Gallery</h2>
+        <div class="carousel slide" id="screenshot-carousel" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#screenshot-carousel"  data-slide-to="0"  class="active"></li>
+            <li data-target="#screenshot-carousel" data-slide-to="1"></li>
+            <li data-target="#screenshot-carousel" data-slide-to="2"></li>
+            <li data-target="#screenshot-carousel" data-slide-to="3"></li>
+          </ol>
+          <div class="carousel-inner">
+                      <div class="item active">
+                        <img src="image.jpg" alt="Text of the image">
+                        <div class="carousel-caption">
+                          <h3></h3>
+                          <p><p>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <img src="image1.jpg" alt="Text of the image">
+                        <div class="carousel-caption">
+                          <h3></h3>
+                          <p><p>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <img src="image.jpg" alt="Text of the image">
+                        <div class="carousel-caption">
+                          <h3></h3>
+                          <p><p>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <img src="image1.jpg" alt="Text of the image">
+                        <div class="carousel-caption">
+                          <h3></h3>
+                          <p><p>
+                        </div>
+                      </div>
+
+          </div><!--end carousel inner-->
+          <a href="#screenshot-carousel" class="left carousel-control" data-slide="previous">
+            <span class="glyphicon glyphicon-chevron-left">
+            </span>
+          </a>
+          <a href="#screenshot-carousel" class="right carousel-control" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right">
+            </span>
+          </a>
+
+        </div><!--end carousel-->
+        </div>
+    </div>
 </div>
 </section>
 </div>
